# Plasmastore

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
cmake_modules/: FindStaticLibrary.cmake
docker/: build_cpu.dockerfile  build_cuda.dockerfile
docker/install/: ubuntu_install_core.sh  ubuntu_install_gcc9.sh
scripts/: build.sh
src/client/: client.cc
src/server/: dlmalloc.cc
